<?xml version="1.0"?>
<package format="2">
  <name>px4ctrlpx4</name>
  <version>0.1.0</version>
  <description>Forward VINS-Fusion pose to MAVROS.</description>
  <maintainer email="2602391233@qq.com">HF</maintainer>
  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>rostest</test_depend>
</package>