<?xml version="1.0"?>
<package format="2">
  <name>nmea_to_navsatfix_pkg</name>
  <version>0.1.0</version>
  <description>A ROS node to convert NMEA messages to NavSatFix.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
